Stop status from covering menus

--- a/templates/default/app.css
+++ b/templates/default/app.css
@@ -48,7 +48,7 @@ tr .stat1 {
     left: 0px;
 	bottom: 0px;
     border-radius: 50%;
-    z-index: 100000;
+	z-index: 10;
     background-size: 14px;
     background-repeat: no-repeat;
 	color: #2d2b2b;
